fixed extra padding

--- a/css/layout1.sass
+++ b/css/layout1.sass
@@ -64,7 +64,6 @@ figure
   overflow: hidden
 
   article
-    padding: 100px 0
     max-width: 840px
     margin: 0 auto
     text-align: center
